# mar26_bds_anomalies_pieces_indus

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda_harmonisation.ipynb
scripts/: install.py
src/: config.py
src/data/: harmonize.py
